--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "MERN stack learning project",
   "type": "module",
-  "main": "server.ts",
+  "main": "dist/server.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "server": "nodemon",
+    "client": "npm run dev --prefix frontend",
+    "dev": "concurrently 'npm run server' 'npm run client' "
   },
   "author": "1codingguy",
   "license": "MIT",
@@ -16,7 +19,10 @@
   "devDependencies": {
     "@types/express": "^4.17.18",
     "@types/node": "^20.7.0",
+    "@types/nodemon": "^1.19.3",
+    "concurrently": "^8.2.1",
     "dotenv": "^16.3.1",
+    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
