--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "1codingguy",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/node": "^20.7.0",
     "@types/nodemon": "^1.19.3",
