--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.5.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.7.0",
     "@types/nodemon": "^1.19.3",
     "concurrently": "^8.2.1",
