--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "start": "node dist/server.js",
     "server": "nodemon",
     "client": "npm run dev --prefix frontend",
-    "dev": "concurrently 'npm run server' 'npm run client' "
+    "dev": "concurrently 'npm run server' 'npm run client' ",
+    "data:import": "tsc && node dist/seeder.js",
+    "data:destroy": "tsc && node dist/seeder.js -d"
   },
   "author": "1codingguy",
   "license": "MIT",
   "dependencies": {
-    "@types/bcryptjs": "^2.4.4",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mongoose": "^7.5.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.4",
     "@types/express": "^4.17.18",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.7.0",
