--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
+    "@types/react-bootstrap": "^0.32.33",
     "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.27",
     "@types/react-router-bootstrap": "^0.26.2",
