--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.4",
+    "@types/cookie-parser": "^1.4.5",
     "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/mongoose": "^5.11.97",
