--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-router-bootstrap": "^0.26.2",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -27,6 +28,7 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.27",
     "@types/react-router-bootstrap": "^0.26.2",
+    "@types/react-toastify": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
