--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.3"
+    "mongoose": "^7.5.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.4",
@@ -28,6 +29,7 @@
     "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.10",
     "@types/node": "^20.7.0",
     "@types/nodemon": "^1.19.3",
     "concurrently": "^8.2.1",
